# MicroProjetJIN4

./: .gitignore  CMakeLists.txt  README.md
imgui-sfml/: CMakeLists.txt
mainLauncher/: CMakeLists.txt  mainLauncher.cpp
resources/: imgui.ini
resources/maps/: boat_tileset.tsx  indev_tileset.tsx  styx.tmx
resources/shaders/: old_movie.frag
src/: BoatSegment.cpp  BoatSegment.h  CMakeLists.txt  Game.cpp  Game.h  GameState.cpp  GameState.h  GameplaySegment.cpp  GameplaySegment.h  MusicLine.cpp  MusicLine.h  MusicLinePart.cpp  MusicLinePart.h  MusicSegment.cpp  MusicSegment.h  RNG.cpp  RNG.h  Scene.cpp  Scene.h  Sound.cpp  Sound.h  gameMain.cpp  gameMain.h  math_help.cpp  math_help.h
src/boat_segment/: BoatSegment.cpp  BoatSegment.h  GameState.cpp  GameState.h  MusicLine.cpp  MusicLine.h  MusicLinePart.cpp  MusicLinePart.h  MusicSegment.cpp  MusicSegment.h
src/boat_segment/elements/: BoatElement.cpp  BoatElement.h  CollisionElement.cpp  CollisionElement.h  DecorationElement.cpp  DecorationElement.h  EnemyElement.cpp  EnemyElement.h  FinishLineElement.cpp  FinishLineElement.h  FixedBackground.cpp  FixedBackground.h  LoopingBackground.cpp  LoopingBackground.h  MusicLineElement.cpp  MusicLineElement.h  SceneElement.h
src/elements/: BoatElement.cpp  BoatElement.h  DecorationElement.cpp  DecorationElement.h  EnemyElement.cpp  EnemyElement.h  FinishLineElement.cpp  FinishLineElement.h  LoopingBackground.cpp  LoopingBackground.h  MusicLineElement.cpp  MusicLineElement.h  PlayerLineElement.cpp  PlayerLineElement.h  SceneElement.cpp  SceneElement.h  ShoreElement.cpp  ShoreElement.h  TmpLineElement.cpp  TmpLineElement.h
src/specialscreens/: GameOverScreen.hpp  TransitionScreen.hpp  VictoryScreen.cpp  VictoryScreen.h
unitTests/: CMakeLists.txt  CMakeLists.txt.in  unitTests.cpp
